# youtube-cli

./: README.md  pyproject.toml
src/youtube_cli/: __init__.py  app.py  models.py  playback.py  prefetch.py  queue_state.py  recommendations.py  search.py  text.py  view.py  youtube.py
